@@ -55,6 +55,7 @@
 		<script type="text/javascript" src="js/buildings/horizontal_bridge.js"></script>
 		<script type="text/javascript" src="js/buildings/plasma_turret.js"></script>
 		<script type="text/javascript" src="js/buildings/neutron_accelerator.js"></script>
+		<script type="text/javascript" src="js/buildings/vertical_bridge.js"></script>
 		<script type="text/javascript" src="js/buildings/dependencies.js"></script>
 		
 		<script type="text/javascript" src="js/units/abstract.js"></script>
