@@ -23,10 +23,11 @@ HorizontalBridgeBuilding.res_key = 'horizontal_bridge';
 HorizontalBridgeBuilding.obj_name = 'Small Horizontal Bridge';
 HorizontalBridgeBuilding.cost = 100;
 HorizontalBridgeBuilding.build_time = 2;
-HorizontalBridgeBuilding.sell_cost = 37;
+HorizontalBridgeBuilding.sell_cost = 50;
 HorizontalBridgeBuilding.sell_time = 1;
 HorizontalBridgeBuilding.health_max = 400;
 HorizontalBridgeBuilding.energy = 0;
+HorizontalBridgeBuilding.crater = 8;
 HorizontalBridgeBuilding.enabled = true;
 HorizontalBridgeBuilding.can_build = true;
 HorizontalBridgeBuilding.is_bridge = true;
