@@ -2417,7 +2417,7 @@ function Level1()
 			HeadquarterBuilding, WaterLaunchPadBuilding, TaelonPowerBuilding, 
 			TrainingFacilityBuilding, AssemblyPlantBuilding, PlasmaTurretBuilding,
 			NeutronAcceleratorBuilding, CameraTowerBuilding, FieldHospitalBuilding, 
-			HorizontalBridgeBuilding, 
+			HorizontalBridgeBuilding, VerticalBridgeBuilding, 
 			//Upgrades
 			Headquarter2Building, Headquarter3Building, 
 			TrainingFacility2Building, AssemblyPlant2Building,
