@@ -1,6 +1,5 @@
 To do:
 	- Correct bullet animation
-	- Add craters for bridges
 
 - High priority bugs:
 	- Sometimes unit attack unknown target
@@ -16,10 +15,7 @@ To do:
 	- Unit production indicator on right panel looks not exactly as original one
 	- Add smooth animation on water indicator when selling water
 	- When building upgraded we should calculate exact proportion on health for new building
-	- Add "Light" layer for:
-		- PlasmaRifle blast animation
-		- GatPlasma blast animation
-		- NeutronAss blast animation
+	- Light layer on blast for: PlasmaRifle, GatPlasma, NeutronAss, PolyAcid
 
 - Very low priority bugs:
 	- When mouseover building or unit, it's name should be shown after small delay
