@@ -3,6 +3,7 @@ Build 35
 - Added Exterminator unit and PolyAcid weapon
 - Unit sound system now have much flexible structure 
 - Added "Hover" movement mode
+- Added Vertical Bridge
 
 Build 34 (21.03.2013)
 - Changed the way building are constructed and sold. Now it's works exactly as in original game
